# sominnn

./: CMakeLists.txt  README.md
src/: activation.cpp  activation.h  constinput.h  datainput.h  neuron.cpp  neuron.h  neuron.inl  nn.cpp  nn.h  node.h  sominnn_math.cpp  sominnn_math.h  typedefs.h
test/: test.cpp
